fixed spacing for icons

--- a/src/styles/partials/components/_alt-list.scss
+++ b/src/styles/partials/components/_alt-list.scss
@@ -1,3 +1,5 @@
+$icon-arrow-width: 32px;
+
 .dg_alt-list {
   list-style-type: none;
   margin-bottom: $margin-large;
@@ -36,6 +38,7 @@
     text-transform: uppercase;
     @include default-transition(color);
     position: relative;
+    padding-right: $icon-arrow-width; /* leave space for the absolutely position icon */
 
     &:after {
       color: $gray-light;
@@ -59,7 +62,7 @@
       i {
         @include list-icon;
         text-align: left;
-        min-width: 32px;
+        min-width: $icon-arrow-width;
       }
     }
   }
